# home-match-agent

./: .flake8  .gitignore  HomeMatch.ipynb  README.md  pyproject.toml  real_estate_listings.json
src/: configs.py  provider.py
src/db/: chroma_db.py  generate_sample_data.py
src/db/models/: __init__.py  real_estate_listing.py
